// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`divider demo > renders _semantic correctly 1`] = `
<div
  class="semantic-preview-container"
  data-v-dfc8ebef=""
>
  <div
    class="ant-row css-var-root semantic-preview-row"
    data-v-dfc8ebef=""
  >
    <div
      class="ant-col ant-col-16 css-var-root semantic-preview-col"
      data-v-dfc8ebef=""
    >
      <div>
        <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
        </p>
        <div
          class="ant-divider css-var-v-0 ant-divider-horizontal ant-divider-rail semantic-mark-rail semantic-mark-root"
          role="separator"
        >
          <!---->
        </div>
        <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
        </p>
        <div
          class="ant-divider css-var-v-0 ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center semantic-mark-root"
          role="separator"
        >
          <div
            class="ant-divider-rail ant-divider-rail-start semantic-mark-rail"
          />
          <span
            class="ant-divider-inner-text semantic-mark-content"
          >
             Solid 
          </span>
          <div
            class="ant-divider-rail ant-divider-rail-end semantic-mark-rail"
          />
        </div>
        <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
        </p>
        <div
          class="ant-divider css-var-v-0 ant-divider-horizontal ant-divider-with-text ant-divider-with-text-start ant-divider-dotted semantic-mark-root"
          role="separator"
        >
          <div
            class="ant-divider-rail ant-divider-rail-start semantic-mark-rail"
          />
          <span
            class="ant-divider-inner-text semantic-mark-content"
          >
             Dotted 
          </span>
          <div
            class="ant-divider-rail ant-divider-rail-end semantic-mark-rail"
          />
        </div>
        <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
        </p>
        <div
          class="ant-divider css-var-v-0 ant-divider-horizontal ant-divider-with-text ant-divider-with-text-end ant-divider-dashed semantic-mark-root"
          role="separator"
        >
          <div
            class="ant-divider-rail ant-divider-rail-start semantic-mark-rail"
          />
          <span
            class="ant-divider-inner-text semantic-mark-content"
          >
             Dashed 
          </span>
          <div
            class="ant-divider-rail ant-divider-rail-end semantic-mark-rail"
          />
        </div>
         These 
        <div
          class="ant-divider css-var-v-0 ant-divider-vertical ant-divider-rail semantic-mark-rail semantic-mark-root"
          role="separator"
        >
          <!---->
        </div>
         are 
        <div
          class="ant-divider css-var-v-0 ant-divider-vertical ant-divider-rail semantic-mark-rail semantic-mark-root"
          role="separator"
        >
          <!---->
        </div>
         vertical 
        <div
          class="ant-divider css-var-v-0 ant-divider-vertical ant-divider-rail semantic-mark-rail semantic-mark-root"
          role="separator"
        >
          <!---->
        </div>
         Dividers 
      </div>
    </div>
    <div
      class="ant-col ant-col-8 css-var-root"
      data-v-dfc8ebef=""
    >
      <ul
        class="semantic-list"
        data-v-dfc8ebef=""
      >
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  root
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <!--v-if-->
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Root element with border-top style, divider styling and other basic divider container styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  rail
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <!--v-if-->
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Background rail element with border-top style and other divider connection line styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  content
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <!--v-if-->
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Content element with inline-block display, padding and other divider text content styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`divider demo > renders component-token correctly 1`] = `
<div
  data-v-app=""
>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
  <div
    class="ant-divider css-var-v-0 ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
      Text
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
  <div
    class="ant-divider css-var-v-0 ant-divider-horizontal ant-divider-with-text ant-divider-with-text-start"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
       Left Text 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
  <div
    class="ant-divider css-var-v-0 ant-divider-horizontal ant-divider-with-text ant-divider-with-text-end"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
       Right Text 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
  <div
    class="ant-divider css-var-v-0 ant-divider-horizontal ant-divider-with-text ant-divider-with-text-start"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
      style="margin: 0px;"
    >
       Left Text margin with 0 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
  <div
    class="ant-divider css-var-v-0 ant-divider-horizontal ant-divider-with-text ant-divider-with-text-end"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
      style="margin: 50px;"
    >
       Right Text margin with 50px 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
</div>
`;

exports[`divider demo > renders customize-style correctly 1`] = `
<div
  data-v-app=""
>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-rail"
    role="separator"
    style="border-width: 2px; border-color: rgb(124, 179, 5);"
  >
    <!---->
  </div>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-dashed ant-divider-rail"
    role="separator"
    style="border-color: rgb(124, 179, 5);"
  >
    <!---->
  </div>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center ant-divider-dashed"
    role="separator"
    style="border-color: rgb(124, 179, 5);"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
       Text 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <div
    class="ant-divider css-var-root ant-divider-vertical ant-divider-rail"
    role="separator"
    style="height: 60px; border-color: rgb(124, 179, 5);"
  >
    <!---->
  </div>
  <div
    class="ant-divider css-var-root ant-divider-vertical ant-divider-dashed ant-divider-rail"
    role="separator"
    style="height: 60px; border-color: rgb(124, 179, 5);"
  >
    <!---->
  </div>
  <div
    style="display: flex; flex-direction: column; height: 50px; box-shadow: 0 0 1px red;"
  >
    <div
      class="ant-divider css-var-root ant-divider-horizontal ant-divider-with-text ant-divider-with-text-start"
      role="separator"
      style="background: rgba(0, 255, 0, 0.05);"
    >
      <div
        class="ant-divider-rail ant-divider-rail-start"
      />
      <span
        class="ant-divider-inner-text"
      >
         Text 
      </span>
      <div
        class="ant-divider-rail ant-divider-rail-end"
      />
    </div>
  </div>
</div>
`;

exports[`divider demo > renders horizontal correctly 1`] = `
<div
  data-v-app=""
>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-rail"
    role="separator"
  >
    <!---->
  </div>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-dashed ant-divider-rail"
    role="separator"
  >
    <!---->
  </div>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
</div>
`;

exports[`divider demo > renders plain correctly 1`] = `
<div
  data-v-app=""
>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center ant-divider-plain"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
       Text 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-with-text ant-divider-with-text-start ant-divider-plain"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
       Left Text 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-with-text ant-divider-with-text-end ant-divider-plain"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
       Right Text 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
</div>
`;

exports[`divider demo > renders size correctly 1`] = `
<div
  data-v-app=""
>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-sm ant-divider-rail"
    role="separator"
  >
    <!---->
  </div>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-md ant-divider-rail"
    role="separator"
  >
    <!---->
  </div>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-rail"
    role="separator"
  >
    <!---->
  </div>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
</div>
`;

exports[`divider demo > renders style-calss correctly 1`] = `
<div>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center demo-divider-root"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start demo-divider-rail"
    />
    <span
      class="ant-divider-inner-text demo-divider-content"
    >
       classes Object 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end demo-divider-rail"
    />
  </div>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-with-text ant-divider-with-text-start demo-divider-root--start"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
       classes Function 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center"
    role="separator"
    style="border-width: 2px; border-style: dashed;"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
      style="opacity: 0.85;"
    />
    <span
      class="ant-divider-inner-text"
      style="font-style: italic;"
    >
       styles Object 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
      style="opacity: 0.85;"
    />
  </div>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center ant-divider-sm"
    role="separator"
    style="opacity: 0.6; cursor: default;"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
       styles Function 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
</div>
`;

exports[`divider demo > renders variant correctly 1`] = `
<div
  data-v-app=""
>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center"
    role="separator"
    style="border-color: rgb(124, 179, 5);"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
       Solid 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center ant-divider-dotted"
    role="separator"
    style="border-color: rgb(124, 179, 5);"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
       Dotted 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center ant-divider-dashed"
    role="separator"
    style="border-color: rgb(124, 179, 5);"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
       Dashed 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
</div>
`;

exports[`divider demo > renders vertical correctly 1`] = `
<div
  data-v-app=""
>
   Text 
  <div
    class="ant-divider css-var-root ant-divider-vertical ant-divider-rail"
    role="separator"
  >
    <!---->
  </div>
  <a
    href="#"
  >
    Link
  </a>
  <div
    class="ant-divider css-var-root ant-divider-vertical ant-divider-rail"
    role="separator"
  >
    <!---->
  </div>
  <a
    href="#"
  >
    Link
  </a>
</div>
`;

exports[`divider demo > renders with-text correctly 1`] = `
<div
  data-v-app=""
>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
      Text
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-with-text ant-divider-with-text-start"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
       Left Text 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-with-text ant-divider-with-text-end"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
       Right Text 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-with-text ant-divider-with-text-start"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
      style="margin: 0px;"
    >
       Left Text margin with 0 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-with-text ant-divider-with-text-end"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
      style="margin: 0px 50px;"
    >
       Right Text margin with 50px 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo. 
  </p>
</div>
`;
